[package]
name = "distill-gui"
version = "0.1.0"
edition = "2021"
description = "Norton Commander style tool for converting websites to clean Markdown"

[dependencies]
eframe = { version = "0.27", features = ["wgpu"] }
egui = "0.27"
rfd = "0.14"           # File dialogs
tokio = { version = "1", features = ["full", "process"] }
anyhow = "1.0"
zip = "0.6"
chrono = "0.4"
open = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5.0"
